# sx1232-driver

./: CMakeLists.txt  README.md  sx1232_driver_flags.h.in  sx1232_driver_flags_template.txt
inc/: sx1232.h  sx1232_hw.h
src/: sx1232.c  sx1232_hw.c
